[tool.poetry]
name = "the-void-bot"
version = "0.1.0"
description = ""
authors = ["bryan-zake <bryan@bzake.com>"]
license = "The MIT License (MIT)"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = "^2.2.3"
openai = "^0.27.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
